feat: 添加基本的项目结构代码

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>TextToLcd</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/" />
+  <meta charset="utf-8" />
+  <title>在线文字取模工具 - 缺小小</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <app-root></app-root>
+  <tcs-text-to-lcd-root></tcs-text-to-lcd-root>
 </body>
 </html>
