deploy: 2019年04月12日 16时33分

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base href="/" />
-  <meta charset="utf-8" />
+  <base href="/text-to-lcd">  <meta charset="utf-8" />
   <title>在线文字取模工具 - 缺小小</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
